# gaia

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  Roadmap.md  deny.toml
.claude/agents/: governance-wave1a-proposal-params.md  governance-wave1b-membership-params.md  governance-wave2-action-enum.md  governance-wave3a-time-locks.md  governance-wave3b-proposal-classes.md  governance-wave4-runtime-upgrade.md  merger.md  post-build.md
.codex/: instructions.md
.codex/agents/: governance-wave1a-proposal-params.md  governance-wave1b-membership-params.md  governance-wave2-action-enum.md  governance-wave3a-time-locks.md  governance-wave3b-proposal-classes.md  governance-wave4-runtime-upgrade.md  post-build.md  ralph-loop-controller.md  security-upgrade.md
.github/: copilot-instructions.md
.github/agents/: post-build.md
community-chain/.github/: copilot-instructions.md
community-chain/.github/agents/: security-upgrade.md
community-chain/docs/: current-state.md
community-chain/docs/decisions/: 001-standalone-chain.md  002-versioning-policy.md
docs/: current-state.md  domain-model.md
docs/agent-state/: codex-governance-wave1a-proposal-params.md  codex-governance-wave1b-membership-params.md
docs/decisions/: 003-wasm32v1-none-target.md  004-project-license-gpl-3.0-or-later.md  005-suspension-unanimity.md  006-treasury-sovereign-account.md  007-membership-proposal-lifecycle-and-threshold-baseline.md  008-multi-agent-workflow.md  009-governance-proposal-parameter-storage.md  010-governance-membership-parameter-storage.md  011-generalized-proposal-execution.md  012-execution-delay-time-lock.md  013-proposal-class-system.md  014-runtime-upgrade-governance.md  015-system-facing-current-state-specification.md
docs/decisions/draft/: codex-governance-wave1a-proposal-params-governance-parameter-storage.md  codex-governance-wave1b-membership-parameter-storage.md  codex-governance-wave3a-time-locks-execution-delay-time-lock.md  codex-governance-wave3b-proposal-classes-proposal-class-system.md
docs/plans/: 2026-04-05-001-architecture-hardening-plan.md  governance-on-chain.md  ralph-loop-codex.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/membership/: Cargo.toml
pallets/membership/src/: lib.rs  mock.rs  tests.rs
pallets/proposals/: Cargo.toml
pallets/proposals/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/treasury/: Cargo.toml
pallets/treasury/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: membership.rs  mod.rs  proposals.rs  template.rs  treasury.rs
tester-cli/: Cargo.toml
tester-cli/artifacts/: gaia.scale
tester-cli/src/: api.rs  main.rs  output.rs  personas.rs
tester-cli/src/commands/: local.rs  membership.rs  mod.rs  persona.rs  proposal.rs  treasury.rs  watch.rs
tests/: Cargo.toml
tests/src/: common.rs  cross_pallet.rs  lib.rs  membership.rs  proposals.rs  treasury.rs
