[package]
name = "gaia-tester-cli"
default-run = "gaia-tester-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.97"
clap = { workspace = true, features = ["derive"] }
subxt = { version = "0.39.0", features = ["native"] }
subxt-signer = { version = "0.39.0", features = ["subxt"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread", "time"] }
