[package]
name = "gaia-treasury"
description = "GAIA treasury pallet — community-owned token pool."
version = "0.1.0"
license = "GPL-3.0-or-later"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
scale-info = { features = ["derive"], workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
